--- a/WheresMyItems/i18n/default.json
+++ b/WheresMyItems/i18n/default.json
@@ -1,28 +1,31 @@
 {
-  "config.searchmenu.title": "Search menu keybind",
+  "config.searchmenu.name": "Search menu keybind",
   "config.searchmenu.tooltip": "Which keybind should open the search menu.",
+  
   "config.highlightchests.name": "Highlight chests",
   "config.highlightchests.tooltip": "Whether to highlight chests containing searched items.",
-  "config.highlightchests.values.none": "None",
   "config.highlightchests.values.pulsating": "Pulsating chests",
   "config.highlightchests.values.ripple": "Typing ripple",
-  "config.drawitemsoverchests.name": "Draw items over chests",
-  "config.drawitemsoverthests.tooltip": "Whether to draw searched items over chests.",
-  "config.limitdrawnitemsoverchests.name": "Limit max drawn items",
-  "config.limitdrawnitemsoverthests.tooltip": "Whether to limit how many items can be drawn at once (per chest).\nNote: having many items with chests near each other may cause drawn items to overlap.",
+  
   "config.maxitemsoverchests.name": "Max drawn items",
-  "config.maxitemsoverthests.tooltip": "How many items to draw at once (per chest).",
+  "config.maxitemsoverthests.tooltip": "How many items to draw at once (per chest).\nIf set to 0, no items will be drawn (equivalent to \"Item display style: None\").\nIf set to -1, there will be no limit to how many items can be drawn",
+  
   "config.drawdirection.name": "Item display style",
-  "config.drawdirection.tooltip": "Which style/orientation to use when displaying items over chests.",
+  "config.drawdirection.tooltip": "Which style to use when displaying items over chests.",
+  
   "config.drawdirection.values.horizontal": "Horizontal",
   "config.drawdirection.values.vertical": "Vertical",
   "config.drawdirection.values.gridhorizontal": "Grid with horizontal priority",
+  
   "config.displayguidearrows.name": "Display guide arrows",
   "config.displayguidearrows.tooltip": "Whether to display arrows pointing towards chests and/or when to display arrows.",
-  "config.displayguidearrows.values.none": "Never",
   "config.displayguidearrows.values.whilemenuopen": "While search menu is open",
   "config.displayguidearrows.values.untilnextmenu": "Until next menu is opened",
   
+  "config.section.general": "General",
+  "config.section.highlighting": "Highlighting",
+  
+  "strings.common.none": "None",
   "strings.previoussearch.tooltip": "Use previous search query: {{previousSearch}}",
   "strings.previoussearch.nopreviousquery": "(no previous search)"
 }
